# MES

./: CMakeLists.txt  ELEMENT.cpp  ELEMENT.h  GRID.cpp  GRID.h  NODE.cpp  NODE.h  UniversalElement.cpp  UniversalElement.h  Utility.cpp  Utility.h  data.txt  main.cpp  projectData.txt
Grid/: GRID.cpp  GRID.h
Grid/Components/: ELEMENT.h  NODE.h
UniversalElements/: KsiEta.cpp  KsiEta.h  UniversalElement.cpp  UniversalElement.h  UniversalElementSides.cpp  UniversalElementSides.h
Utility/: Calculations.cpp  Calculations.h  Matrix.cpp  Matrix.h  Utility.cpp  Utility.h
